# Projects_AlgoDS

./: CMakeLists.txt  README.md
coursework/: CMakeLists.txt  README.md  application.cpp  application.h  reportCW.doc
coursework/KruskalsAlgorithm/: KruskalsAlgorithm.cpp  KruskalsAlgorithm.h  inputgraph.txt  outputMST.txt
practical1/: CMakeLists.txt  README.md  application.cpp
practical1/RPN/: RPN.cpp  RPN.h
practical1/Structures/: DL_List.cpp  DL_List.h  D_Array.cpp  D_Array.h  Stack.cpp  Stack.h
practical2/: CMakeLists.txt  README.md  application.cpp  application.h
practical2/sortings/: D_Array.cpp  D_Array.h  Quicksort.cpp  Quicksort.h  Timsort.cpp  Timsort.h
practical3/: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp
practical3/Trees/: AVLTree.cpp  AVLTree.h  BinaryTree.cpp  BinaryTree.h  outputBinaryTree.txt
